feat: 어드민 대시보드 전체 구현 완료
백엔드:
- JWT 인증 (JwtTokenProvider, JwtAuthenticationFilter, SecurityConfig)
- 엔티티 추가: Photo, Inquiry, Series, SeriesPhoto / Member에 profileName 추가
- Admin API: Stats(요약/일별/TOP10/무드분포/촬영종류), Member(목록/역할변경/삭제),
  Photo(목록/삭제), Inquiry(목록/읽음처리/삭제), Series(목록/삭제), System(상태조회)
- DataInitializer: H2 개발환경 테스트 데이터 자동 삽입
- Gradle 8.13 → 8.14.4, JJWT 0.12.6 / PostgreSQL 드라이버 추가

프론트엔드:
- AuthContext (JWT 저장/관리), ProtectedRoute
- Sidebar + AdminLayout 레이아웃
- 페이지 7개: Dashboard, MemberList, PhotoList, InquiryList, SeriesList, Stats, System
- Recharts 3.x: 바/꺾은선/파이 차트
- Pagination 공통 컴포넌트

문서:
- ADMIN_PLAN.md 구현 완료 처리 (모든 체크리스트 완료)
- CLAUDE.md 아키텍처 업데이트 + 작업 규칙 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>